<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">

        <include
            android:id="@+id/header"
            layout="@layout/material_header"
            app:headlineText="@{@string/settings}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/outline_horizontal"
            android:paddingTop="@dimen/space_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <TextView
                android:id="@+id/timer_text"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:text="@string/start_timer_in_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/timer_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/timer_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/timer_text"
                app:thumbTint="@drawable/custom_thumb_selector" />

            <TextView
                android:id="@+id/cooking_step_preview_text"
                style="@style/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:text="@string/show_cooking_steps_preview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timer_text"
                app:layout_constraintEnd_toStartOf="@id/cooking_step_preview_switch"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/cooking_step_preview_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/cooking_step_preview_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cooking_step_preview_text"
                app:thumbTint="@drawable/custom_thumb_selector"
                tools:checked="true" />

            <TextView
                android:id="@+id/dark_mode_text"
                style="@style/bold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:layout_marginTop="@dimen/default_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cooking_step_preview_text" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dark_mode_text">

                <RadioButton
                    android:id="@+id/radio_light_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="@string/light"/>

                <RadioButton
                    android:id="@+id/radio_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="@string/dark" />

                <RadioButton
                    android:id="@+id/radio_system_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="@string/system_settings" />

            </RadioGroup>

            <TextView
                android:id="@+id/backup_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group"
                android:layout_marginTop="@dimen/default_space"
                style="@style/bold_text"
                android:text="@string/backup"
                />

            <TextView
                android:id="@+id/save_data_text"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="14dp"
                android:text="@string/save_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backup_headline" />

            <TextView
                android:id="@+id/restore_data_text"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="14dp"
                android:text="@string/restore_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/save_data_text" />

            <LinearLayout
                android:id="@+id/to_site_notice_element"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_space"
                android:layout_marginTop="@dimen/default_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restore_data_text">

                <TextView
                    android:id="@+id/to_site_notice_headline"
                    style="@style/bold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_notice" />

                <ImageButton
                    android:id="@+id/to_site_notice_button"
                    android:layout_width="@dimen/small_arrow_button"
                    android:layout_height="@dimen/small_arrow_button"
                    android:layout_marginStart="@dimen/space_button_text"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:clickable="false"
                    android:contentDescription="@string/to_site_notice"
                    android:focusable="false" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
