<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- background color is set by background round_corners -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/import_backup_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:paddingBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_form_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <TextView
                android:id="@+id/headline"
                style="@style/headline_2"
                android:includeFontPadding="false"
                android:text="@string/restore_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/import_dir_text"
                style="@style/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_space"
                android:text="@string/select_file"
                app:layout_constraintBottom_toBottomOf="@id/select_file_button"
                app:layout_constraintEnd_toStartOf="@id/select_file_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/select_file_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_file_button"
                style="@style/tertiary_button"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/select"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headline" />

            <TextView
                style="@style/bold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_space"
                android:gravity="center"
                android:text="@string/data_reset_warning"
                android:textColor="#FF0000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_file_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            android:text="@string/reset_data_and_restore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_form_wrapper" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/invisible_button"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
